# hopper-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  demo.py
hopper/: __init__.py
scripts/: simulate_pool.py  voice_sim.py
