[project]
name = "hopper-client"
version = "0.1.0"
description = "Drop-in, voice-tuned OpenAI client (HTTP/2 + warm connection reuse)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.40",
    # http2 extra pulls in h2 — HTTP/2 is on by default, so it's a hard dep.
    "httpx[http2]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hopper"]
